@@ -20,10 +20,17 @@ struct GBCartridgeOverride {
 	uint32_t gbColors[12];
 };
 
+struct GBColorPreset {
+	const char* name;
+	uint32_t colors[12];
+};
+
 struct Configuration;
 bool GBOverrideFind(const struct Configuration*, struct GBCartridgeOverride* override);
 bool GBOverrideColorFind(struct GBCartridgeOverride* override);
 void GBOverrideSave(struct Configuration*, const struct GBCartridgeOverride* override);
+
+size_t GBColorPresetList(const struct GBColorPreset** presets);
 
 struct GB;
 void GBOverrideApply(struct GB*, const struct GBCartridgeOverride*);
